# dioptase

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
scripts/: build.sh  entitlements.plist  generate-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: git.rs  mod.rs
src-tauri/src/commands/caffeinate/: commands.rs
src-tauri/src/commands/clipboard/: commands.rs
src-tauri/src/commands/database/: commands.rs  mod.rs  storage.rs  types.rs
src-tauri/src/commands/http_client/: commands.rs
src-tauri/src/commands/mac_cleaner/: commands.rs
src-tauri/src/commands/notes/: commands.rs
src-tauri/src/commands/performance/: commands.rs
src-tauri/src/commands/screenshot/: commands.rs
src-tauri/src/commands/ssh_shell/: commands.rs
src/features/caffeinate/: Caffeinate.tsx  index.ts
src/features/clipboard/: Clipboard.tsx
src/features/database/: Database.tsx
src/features/git/: GitUI.tsx  index.ts
src/features/http-client/: HttpClient.tsx  index.ts
src/features/mac-cleaner/: MacCleaner.tsx  index.ts
src/features/notes/: Notes.tsx  completions.ts
src/features/performance/: Performance.tsx
src/features/screenshot/: Screenshot.tsx
src/features/ssh-shell/: SshShell.tsx  index.ts
src/features/text-beautifier/: TextBeautifier.tsx  index.ts
src/hooks/: useTheme.ts
src/styles/: globals.css
src/types/: react-simple-code-editor.d.ts
(+2 files in other folders)
