[package]
name = "dioptase"
version = "0.1.0"
description = "An all-in-one macOS toolbox"
authors = ["you"]
edition = "2021"

[lib]
name = "dioptase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.34"
arboard = "3"
reqwest = { version = "0.12", features = ["json"] }
screenshots = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "postgres", "sqlite", "any", "chrono"] }
dirs = "6.0.0"
urlencoding = "2.1.3"
portable-pty = "0.9.0"
chrono = "0.4"
russh = "0.52"
russh-sftp = "2.0"
redis = { version = "0.27", features = ["tokio-comp"] }
